--- a/manifests/overlays/rhoai/kustomization.yaml
+++ b/manifests/overlays/rhoai/kustomization.yaml
@@ -6,6 +6,7 @@ commonLabels:
 resources:
   - ../../base
   - anaconda-ce-validator-cron.yaml
+  - nvidia-nim-validator-cron.yaml
 patchesJson6902:
   - path: service-account.yaml
     target:
