--- a/manifests/core-bases/base/deployment.yaml
+++ b/manifests/core-bases/base/deployment.yaml
@@ -84,7 +84,7 @@ spec:
             - --pass-access-token
             - '--openshift-delegate-urls={"/": {"resource": "projects", "verb": "list"}}'
             - --skip-auth-regex=^/metrics
-          image: oauth-proxy
+          image: registry.redhat.io/openshift4/ose-oauth-proxy@sha256:ab112105ac37352a2a4916a39d6736f5db6ab4c29bad4467de8d613e80e9bb33
           ports:
             - containerPort: 8443
               name: https
